--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240214221525">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240215214121">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,13 +40,13 @@
 						</ul>
 						<ul class="menu__page">
 							<li class="menu__page-item">
-								<a class="menu__page-link" href="#">Contact Us</a>
+								<a class="menu__page-link lng-menu-page-link-1" href="#"></a>
 							</li>
 							<li class="menu__page-item">
-								<a class="menu__page-link" href="#">Our Blog</a>
+								<a class="menu__page-link lng-menu-page-link-2" href="#"></a>
 							</li>
 							<li class="menu__page-item">
-								<a class="menu__page-link" href="#">Shipping and Delivery</a>
+								<a class="menu__page-link lng-menu-page-link-3" href="#"></a>
 							</li>
 						</ul>
 						<ul class="user-actions">
@@ -112,82 +112,66 @@
 		<main class="page">
 			<section class="hero">
 				<div class="hero__container">
-					<h1 class="hero__title lng-title">A cup of tea is a moment of calm in the chaos of life</h1>
-					<p class="hero__text lng-text">Wide selection of high-quality teas from all over the world, carefully curated
-						by tea experts.</p>
+					<h1 class="hero__title lng-title"></h1>
+					<p class="hero__text lng-text"></p>
 				</div>
 			</section>
 			<section class="collections">
 				<div class="collections__container">
-					<blockquote class="collections__blockquote lng-blockquote">
-						"Tea is not just a drink, it's a way of life and a way to connect with our loved ones."
-					</blockquote>
-					<h2 class="collections__title title lng-collections">Explore our Collections</h2>
+					<blockquote data-watch data-watch-once class="collections__blockquote lng-blockquote"></blockquote>
+					<h2 data-watch data-watch-once class="collections__title title lng-collections"></h2>
 					<ul class="collections__list">
-						<li class="collections__item">
+						<li data-watch data-watch-once class="collections__item">
 							<div class="collections__image">
-								<picture><source srcset="img/collections/black.webp" type="image/webp"><img src="img/collections/black.jpg" alt="Image"></picture>
+								<picture><source srcset="img/collections/black.webp" type="image/webp"><img src="img/collections/black.png" alt="Image"></picture>
 							</div>
-							<a class="collections__link lng-tea-black" href="#">Black</a>
+							<a class="collections__link lng-tea-black" href="#"></a>
 						</li>
-						<li class="collections__item">
+						<li data-watch data-watch-once class="collections__item">
 							<div class="collections__image">
-								<picture><source srcset="img/collections/green.webp" type="image/webp"><img src="img/collections/green.jpg" alt="Image"></picture>
+								<picture><source srcset="img/collections/green.webp" type="image/webp"><img src="img/collections/green.png" alt="Image"></picture>
 							</div>
-							<a class="collections__link lng-tea-green" href="#">Green</a>
+							<a class="collections__link lng-tea-green" href="#"></a>
 						</li>
-						<li class="collections__item">
+						<li data-watch data-watch-once class="collections__item">
 							<div class="collections__image">
-								<picture><source srcset="img/collections/white.webp" type="image/webp"><img src="img/collections/white.jpg" alt="Image"></picture>
+								<picture><source srcset="img/collections/white.webp" type="image/webp"><img src="img/collections/white.png" alt="Image"></picture>
 							</div>
-							<a class="collections__link lng-tea-white" href="#">White</a>
+							<a class="collections__link lng-tea-white" href="#"></a>
 						</li>
-						<li class="collections__item">
+						<li data-watch data-watch-once class="collections__item">
 							<div class="collections__image">
-								<picture><source srcset="img/collections/oolong.webp" type="image/webp"><img src="img/collections/oolong.jpg" alt="Image"></picture>
+								<picture><source srcset="img/collections/oolong.webp" type="image/webp"><img src="img/collections/oolong.png" alt="Image"></picture>
 							</div>
-							<a class="collections__link lng-tea-oolong" href="#">Oolong</a>
+							<a class="collections__link lng-tea-oolong" href="#"></a>
 						</li>
-						<li class="collections__item">
+						<li data-watch data-watch-once class="collections__item">
 							<div class="collections__image">
-								<picture><source srcset="img/collections/pu-erh.webp" type="image/webp"><img src="img/collections/pu-erh.jpg" alt="Image"></picture>
+								<picture><source srcset="img/collections/pu-erh.webp" type="image/webp"><img src="img/collections/pu-erh.png" alt="Image"></picture>
 							</div>
-							<a class="collections__link lng-tea-puerh" href="#">Pu-erh</a>
+							<a class="collections__link lng-tea-puerh" href="#"></a>
 						</li>
 					</ul>
 				</div>
 			</section>
 			<section class="feedback">
 				<div class="feedback__container">
-					<h2 class="feedback__title title lng-feedback">What our Clients say</h2>
+					<h2 data-watch data-watch-once class="feedback__title title lng-feedback"></h2>
 					<ul class="feedback__list">
-						<li class="feedback__item">
-							<blockquote class="feedback__blockquote lng-feedback-01">
-								"As a tea enthusiast, I have tried teas from all over the world, but this tea store truly stands out.
-								Their teas are of the highest quality and the variety is impressive. This is definitely a tea store that
-								every tea lover should visit."
-							</blockquote>
+						<li data-watch data-watch-once class="feedback__item">
+							<blockquote class="feedback__blockquote lng-feedback-01"></blockquote>
 							<cite class="feedback__author">Alice</cite>
 						</li>
-						<li class="feedback__item">
-							<blockquote class="feedback__blockquote lng-feedback-02">
-								"This tea store is my go-to for all my tea needs. Their selection is unbeatable and the quality of their
-								teas is exceptional."
-							</blockquote>
+						<li data-watch data-watch-once class="feedback__item">
+							<blockquote class="feedback__blockquote lng-feedback-02"></blockquote>
 							<cite class="feedback__author">Mad-Hatter</cite>
 						</li>
-						<li class="feedback__item">
-							<blockquote class="feedback__blockquote lng-feedback-03">
-								"If you're a tea lover, you must visit this tea store. The selection is vast and the quality is
-								outstanding. I guarantee you won't be disappointed."
-							</blockquote>
+						<li data-watch data-watch-once class="feedback__item">
+							<blockquote class="feedback__blockquote lng-feedback-03"></blockquote>
 							<cite class="feedback__author">Dormouse</cite>
 						</li>
-						<li class="feedback__item">
-							<blockquote class="feedback__blockquote lng-feedback-04">
-								"I am not a big tea drinker, but this tea store has converted me. I highly recommend this tea store to
-								anyone looking for a high-quality tea experience."
-							</blockquote>
+						<li data-watch data-watch-once class="feedback__item">
+							<blockquote class="feedback__blockquote lng-feedback-04"></blockquote>
 							<cite class="feedback__author">March Hare</cite>
 						</li>
 					</ul>
@@ -195,107 +179,99 @@
 			</section>
 			<section class="blog">
 				<div class="blog__container">
-					<h2 class="blog__title title lng-blog">Our Tea Blog</h2>
+					<h2 class="blog__title title lng-blog"></h2>
 					<ul class="blog__list">
-						<li class="blog__item item-blog">
+						<li data-watch data-watch-once class="blog__item item-blog">
 							<div class="item-blog__image">
 								<picture><source srcset="img/blog/image-01.webp" type="image/webp"><img src="img/blog/image-01.jpg" alt="Image"></picture>
 							</div>
 							<div class="item-blog__box">
-								<h3 class="item-blog__title lng-blog-title-01">Tea Time Travels: Funny Moments from Around the World
-								</h3>
+								<h3 class="item-blog__title lng-blog-title-01"></h3>
 								<div class="item-blog__autor">by Robinson Crusoe</div>
-								<a class="item-blog__link lng-blog-link" href="#">Read</a>
+								<a class="item-blog__link lng-blog-link" href="#"></a>
 							</div>
 						</li>
-						<li class="blog__item item-blog">
+						<li data-watch data-watch-once class="blog__item item-blog">
 							<div class="item-blog__image">
 								<picture><source srcset="img/blog/image-02.webp" type="image/webp"><img src="img/blog/image-02.jpg" alt="Image"></picture>
 							</div>
 							<div class="item-blog__box">
-								<h3 class="item-blog__title lng-blog-title-02">The Role of Tea in Mental Health</h3>
+								<h3 class="item-blog__title lng-blog-title-02"></h3>
 								<div class="item-blog__autor">by Joker</div>
-								<a class="item-blog__link lng-blog-link" href="#">Read</a>
+								<a class="item-blog__link lng-blog-link" href="#"></a>
 							</div>
 						</li>
-						<li class="blog__item item-blog">
+						<li data-watch data-watch-once class="blog__item item-blog">
 							<div class="item-blog__image">
 								<picture><source srcset="img/blog/image-03.webp" type="image/webp"><img src="img/blog/image-03.jpg" alt="Image"></picture>
 							</div>
 							<div class="item-blog__box">
-								<h3 class="item-blog__title lng-blog-title-03">Tea-rific Tales: Hilarious Stories from Tea Lovers</h3>
+								<h3 class="item-blog__title lng-blog-title-03"></h3>
 								<div class="item-blog__autor">by Casper the Friendly Ghost</div>
-								<a class="item-blog__link lng-blog-link" href="#">Read</a>
+								<a class="item-blog__link lng-blog-link" href="#"></a>
 							</div>
 						</li>
-						<li class="blog__item item-blog">
+						<li data-watch data-watch-once class="blog__item item-blog">
 							<div class="item-blog__image">
 								<picture><source srcset="img/blog/image-04.webp" type="image/webp"><img src="img/blog/image-04.jpg" alt="Image"></picture>
 							</div>
 							<div class="item-blog__box">
-								<h3 class="item-blog__title lng-blog-title-04">Tea and Caffeine: Effects on the Brain and Behavior</h3>
+								<h3 class="item-blog__title lng-blog-title-04"></h3>
 								<div class="item-blog__autor">by Author Authorius</div>
-								<a class="item-blog__link lng-blog-link" href="#">Read</a>
+								<a class="item-blog__link lng-blog-link" href="#"></a>
 							</div>
 						</li>
 					</ul>
-					<button class="blog__button lng-blog-button" type="button">View all</button>
+					<button class="blog__button lng-blog-button" type="button"></button>
 				</div>
 			</section>
 			<section class="more">
 				<div class="more__container">
-					<div class="more__box">
-						<h2 class="more__title title lng-more-title">Want to know more?</h2>
-						<p class="more__text lng-more-text">
-							Join our mailing list and stay up-to-date with the latest news, promotions, and exclusive offers from our
-							tea store. Be the first to know about new tea arrivals, seasonal blends, and special discounts. Don't miss
-							out on the tea-rrific perks - sign up today!
-						</p>
+					<div data-watch data-watch-once class="more__box">
+						<h2 class="more__title title lng-more-title"></h2>
+						<p class="more__text lng-more-text"></p>
 					</div>
-					<div class="more__box">
+					<div data-watch data-watch-once class="more__box">
 						<form class="more__form">
 							<input class="more__email input" type="email" id="email" name="email" placeholder="name@email.com">
 							<button class="more__button" type="submit">Join</button>
 						</form>
 						<div class="more__checkbox checkbox">
 							<input id="c_1" data-error="Ошибка" class="checkbox__input" type="checkbox" value="1" name="form[]">
-							<label for="c_1" class="checkbox__label"><span class="checkbox__text lng-checkbox-text">We take your
-									privacy seriously and are committed to protecting your personal information. By subscribing to our
-									mailing list, you are consenting to receive periodic emails from us about our products, promotions,
-									and other tea-related information.</span></label>
+							<label for="c_1" class="checkbox__label"><span class="checkbox__text lng-checkbox-text"></span></label>
 						</div>
 					</div>
 				</div>
 			</section>
 			<section class="prioritise">
 				<div class="prioritise__container">
-					<h2 class="prioritise__title title lng-prioritise-title">We Prioritise</h2>
+					<h2 class="prioritise__title title lng-prioritise-title"></h2>
 					<ul class="prioritise__list">
 						<li class="prioritise__item item-prioritise">
-							<h3 class="item-prioritise__title lng-prioritise-title-01">Single garden teas</h3>
-							<div class="item-prioritise__subtitle lng-prioritise-subtitle-01">Complete transparency</div>
-							<div class="item-prioritise__icon">
+							<h3 class="item-prioritise__title lng-prioritise-title-01"></h3>
+							<div class="item-prioritise__subtitle lng-prioritise-subtitle-01"></div>
+							<div data-watch data-watch-once class="item-prioritise__icon">
 								<img src="img/prioritise/icon-01.svg" alt="Image">
 							</div>
 						</li>
 						<li class="prioritise__item item-prioritise">
-							<h3 class="item-prioritise__title lng-prioritise-title-02">Only Loose leaf tea</h3>
-							<div class="item-prioritise__subtitle lng-prioritise-subtitle-02">Best Drinking Experience</div>
-							<div class="item-prioritise__icon">
+							<h3 class="item-prioritise__title lng-prioritise-title-02"></h3>
+							<div class="item-prioritise__subtitle lng-prioritise-subtitle-02"></div>
+							<div data-watch data-watch-once class="item-prioritise__icon">
 								<img src="img/prioritise/icon-02.svg" alt="Image">
 							</div>
 						</li>
 						<li class="prioritise__item item-prioritise">
-							<h3 class="item-prioritise__title lng-prioritise-title-03">Customer support</h3>
-							<div class="item-prioritise__subtitle lng-prioritise-subtitle-03">No bots, no automated replies</div>
-							<div class="item-prioritise__icon">
+							<h3 class="item-prioritise__title lng-prioritise-title-03"></h3>
+							<div class="item-prioritise__subtitle lng-prioritise-subtitle-03"></div>
+							<div data-watch data-watch-once class="item-prioritise__icon">
 								<img src="img/prioritise/icon-03.svg" alt="Image">
 							</div>
 						</li>
 						<li class="prioritise__item item-prioritise">
-							<h3 class="item-prioritise__title lng-prioritise-title-04">Fast shipping</h3>
-							<div class="item-prioritise__subtitle lng-prioritise-subtitle-04">Save, Convenient, Reliable</div>
-							<div class="item-prioritise__icon">
+							<h3 class="item-prioritise__title lng-prioritise-title-04"></h3>
+							<div class="item-prioritise__subtitle lng-prioritise-subtitle-04"></div>
+							<div data-watch data-watch-once class="item-prioritise__icon">
 								<img src="img/prioritise/icon-04.svg" alt="Image">
 							</div>
 						</li>
@@ -376,23 +352,23 @@
 					<p class="footer__copy">© Tealuxe, 2023</p>
 					<ul class="partners-logo">
 						<li class="partners-logo__item">
-							<img src="img/footer/partners-01.svg" alt="Image">
+							<a href="#"><img src="img/footer/partners-01.svg" alt="Image"></a>
 						</li>
 						<li class="partners-logo__item">
-							<img src="img/footer/partners-02.svg" alt="Image">
+							<a href="#"><img src="img/footer/partners-02.svg" alt="Image"></a>
 						</li>
 						<li class="partners-logo__item">
-							<img src="img/footer/partners-03.svg" alt="Image">
+							<a href="#"><img src="img/footer/partners-03.svg" alt="Image"></a>
 						</li>
 						<li class="partners-logo__item">
-							<img src="img/footer/partners-04.svg" alt="Image">
+							<a href="#"><img src="img/footer/partners-04.svg" alt="Image"></a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240214221525"></script>
+	<script src="js/app.min.js?_v=20240215214121"></script>
 </body>
 
 </html>
